Colab을 통해 생성됨

--- a/11_moreonnlp_revised.ipynb
+++ b/11_moreonnlp_revised.ipynb
@@ -51,7 +51,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M9jvterL0Tj-",
-        "outputId": "667f6c23-092f-448a-9f76-64c2dd410bc4"
+        "outputId": "88fabcc6-583c-4091-f1a3-a1444bd2e7e2"
       },
       "outputs": [
         {
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhoEMlSeLI_7",
-        "outputId": "9b47b5cf-8f44-431e-e699-d46f44d75005"
+        "outputId": "4321eec9-cf8a-429e-e4d1-0b9233bb90c5"
       },
       "execution_count": null,
       "outputs": [
@@ -116,12 +116,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'NLP_2024'...\n",
-            "remote: Enumerating objects: 164, done.\u001b[K\n",
-            "remote: Counting objects: 100% (41/41), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Total 164 (delta 30), reused 24 (delta 24), pack-reused 123 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (164/164), 2.08 MiB | 16.79 MiB/s, done.\n",
-            "Resolving deltas: 100% (87/87), done.\n"
+            "remote: Enumerating objects: 167, done.\u001b[K\n",
+            "remote: Counting objects: 100% (44/44), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Total 167 (delta 32), reused 24 (delta 24), pack-reused 123 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (167/167), 2.45 MiB | 6.15 MiB/s, done.\n",
+            "Resolving deltas: 100% (89/89), done.\n"
           ]
         }
       ]
@@ -171,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uOaJ9Rj20dX5",
-        "outputId": "cfbcef7b-e231-4274-e62e-363c7d790ea9",
+        "outputId": "06423289-08ad-4633-c2b2-9afdfce5b268",
         "collapsed": true
       },
       "execution_count": null,
@@ -1184,7 +1184,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -1196,10 +1196,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 110
+          "height": 91
         },
         "id": "AgMRpEqs0dr7",
-        "outputId": "4f79bc9d-52a9-49e9-d6ee-6e3b6ad4e62b"
+        "outputId": "4413075e-cf24-4248-faaf-e83434bd9ae7"
       },
       "execution_count": null,
       "outputs": [
@@ -1214,7 +1214,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 6
         }
       ]
     },
@@ -1302,7 +1302,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c994041b-9d56-474d-dc86-aa63b20b7f31"
+        "outputId": "3336733d-d500-46fa-e383-d3fc1d0cc359"
       },
       "execution_count": null,
       "outputs": [
@@ -2314,7 +2314,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -2341,7 +2341,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9303764d-a35c-4a6a-cbc5-44a6db6b9131"
+        "outputId": "ae1983f8-0f91-4c0f-d346-b95078468a00"
       },
       "execution_count": null,
       "outputs": [
@@ -3353,7 +3353,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -3381,7 +3381,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5609d4ba-7cfe-4b70-f3bc-2f7a50335fee"
+        "outputId": "7729e06d-7429-4e8f-d35a-a78c05d41a69"
       },
       "execution_count": null,
       "outputs": [
@@ -4400,7 +4400,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 11
         }
       ]
     },
@@ -4433,7 +4433,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vj0HDBUI0f3I",
-        "outputId": "457b510b-3230-41bf-8d76-83da98c1af46"
+        "outputId": "ee9acc33-4579-439f-bfd3-9fe8c06173cc"
       },
       "execution_count": null,
       "outputs": [
@@ -4483,15 +4483,15 @@
         "# Tokenize the text using the regular expression pattern\n",
         "words = retokenize.tokenize(text)\n",
         "\n",
-        "# Print the first 50 words as an example\n",
-        "print(words[:50])"
+        "# Print the first 500 words as an example\n",
+        "print(words[:500])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DRhhgvnr0glU",
-        "outputId": "0d75f3b9-7054-447b-8812-85d63869be30"
+        "outputId": "d325d2a0-4880-46ab-d5ea-6e3fa2b5fbe5"
       },
       "execution_count": null,
       "outputs": [
@@ -4503,28 +4503,16 @@
             "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.4.2)\n",
             "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2024.9.11)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.6)\n"
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.6)\n",
+            "['Emma', 'by', 'Jane', 'Austen', '1816', 'VOLUME', 'I', 'CHAPTER', 'I', 'Emma', 'Woodhouse', 'handsome', 'clever', 'and', 'rich', 'with', 'a', 'comfortable', 'home', 'and', 'happy', 'disposition', 'seemed', 'to', 'unite', 'some', 'of', 'the', 'best', 'blessings', 'of', 'existence', 'and', 'had', 'lived', 'nearly', 'twenty', 'one', 'years', 'in', 'the', 'world', 'with', 'very', 'little', 'to', 'distress', 'or', 'vex', 'her', 'She', 'was', 'the', 'youngest', 'of', 'the', 'two', 'daughters', 'of', 'a', 'most', 'affectionate', 'indulgent', 'father', 'and', 'had', 'in', 'consequence', 'of', 'her', 'sister', 's', 'marriage', 'been', 'mistress', 'of', 'his', 'house', 'from', 'a', 'very', 'early', 'period', 'Her', 'mother', 'had', 'died', 'too', 'long', 'ago', 'for', 'her', 'to', 'have', 'more', 'than', 'an', 'indistinct', 'remembrance', 'of', 'her', 'caresses', 'and', 'her', 'place', 'had', 'been', 'supplied', 'by', 'an', 'excellent', 'woman', 'as', 'governess', 'who', 'had', 'fallen', 'little', 'short', 'of', 'a', 'mother', 'in', 'affection', 'Sixteen', 'years', 'had', 'Miss', 'Taylor', 'been', 'in', 'Mr', 'Woodhouse', 's', 'family', 'less', 'as', 'a', 'governess', 'than', 'a', 'friend', 'very', 'fond', 'of', 'both', 'daughters', 'but', 'particularly', 'of', 'Emma', 'Between', '_them_', 'it', 'was', 'more', 'the', 'intimacy', 'of', 'sisters', 'Even', 'before', 'Miss', 'Taylor', 'had', 'ceased', 'to', 'hold', 'the', 'nominal', 'office', 'of', 'governess', 'the', 'mildness', 'of', 'her', 'temper', 'had', 'hardly', 'allowed', 'her', 'to', 'impose', 'any', 'restraint', 'and', 'the', 'shadow', 'of', 'authority', 'being', 'now', 'long', 'passed', 'away', 'they', 'had', 'been', 'living', 'together', 'as', 'friend', 'and', 'friend', 'very', 'mutually', 'attached', 'and', 'Emma', 'doing', 'just', 'what', 'she', 'liked', 'highly', 'esteeming', 'Miss', 'Taylor', 's', 'judgment', 'but', 'directed', 'chiefly', 'by', 'her', 'own', 'The', 'real', 'evils', 'indeed', 'of', 'Emma', 's', 'situation', 'were', 'the', 'power', 'of', 'having', 'rather', 'too', 'much', 'her', 'own', 'way', 'and', 'a', 'disposition', 'to', 'think', 'a', 'little', 'too', 'well', 'of', 'herself', 'these', 'were', 'the', 'disadvantages', 'which', 'threatened', 'alloy', 'to', 'her', 'many', 'enjoyments', 'The', 'danger', 'however', 'was', 'at', 'present', 'so', 'unperceived', 'that', 'they', 'did', 'not', 'by', 'any', 'means', 'rank', 'as', 'misfortunes', 'with', 'her', 'Sorrow', 'came', 'a', 'gentle', 'sorrow', 'but', 'not', 'at', 'all', 'in', 'the', 'shape', 'of', 'any', 'disagreeable', 'consciousness', 'Miss', 'Taylor', 'married', 'It', 'was', 'Miss', 'Taylor', 's', 'loss', 'which', 'first', 'brought', 'grief', 'It', 'was', 'on', 'the', 'wedding', 'day', 'of', 'this', 'beloved', 'friend', 'that', 'Emma', 'first', 'sat', 'in', 'mournful', 'thought', 'of', 'any', 'continuance', 'The', 'wedding', 'over', 'and', 'the', 'bride', 'people', 'gone', 'her', 'father', 'and', 'herself', 'were', 'left', 'to', 'dine', 'together', 'with', 'no', 'prospect', 'of', 'a', 'third', 'to', 'cheer', 'a', 'long', 'evening', 'Her', 'father', 'composed', 'himself', 'to', 'sleep', 'after', 'dinner', 'as', 'usual', 'and', 'she', 'had', 'then', 'only', 'to', 'sit', 'and', 'think', 'of', 'what', 'she', 'had', 'lost', 'The', 'event', 'had', 'every', 'promise', 'of', 'happiness', 'for', 'her', 'friend', 'Mr', 'Weston', 'was', 'a', 'man', 'of', 'unexceptionable', 'character', 'easy', 'fortune', 'suitable', 'age', 'and', 'pleasant', 'manners', 'and', 'there', 'was', 'some', 'satisfaction', 'in', 'considering', 'with', 'what', 'self', 'denying', 'generous', 'friendship', 'she', 'had', 'always', 'wished', 'and', 'promoted', 'the', 'match', 'but', 'it', 'was', 'a', 'black', 'morning', 's', 'work', 'for', 'her', 'The', 'want', 'of', 'Miss', 'Taylor', 'would', 'be', 'felt', 'every', 'hour', 'of', 'every', 'day', 'She', 'recalled', 'her', 'past', 'kindness', 'the', 'kindness', 'the', 'affection', 'of', 'sixteen', 'years', 'how', 'she', 'had', 'taught', 'and', 'how', 'she', 'had', 'played', 'with', 'her', 'from', 'five', 'years', 'old', 'how', 'she', 'had', 'devoted', 'all', 'her', 'powers', 'to', 'attach', 'and', 'amuse', 'her', 'in', 'health', 'and']\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[nltk_data] Downloading package gutenberg to /root/nltk_data...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Emma', 'by', 'Jane', 'Austen', '1816', 'VOLUME', 'I', 'CHAPTER', 'I', 'Emma', 'Woodhouse', 'handsome', 'clever', 'and', 'rich', 'with', 'a', 'comfortable', 'home', 'and', 'happy', 'disposition', 'seemed', 'to', 'unite', 'some', 'of', 'the', 'best', 'blessings', 'of', 'existence', 'and', 'had', 'lived', 'nearly', 'twenty', 'one', 'years', 'in', 'the', 'world', 'with', 'very', 'little', 'to', 'distress', 'or', 'vex', 'her']\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data]   Unzipping corpora/gutenberg.zip.\n"
+            "[nltk_data] Downloading package gutenberg to /root/nltk_data...\n",
+            "[nltk_data]   Package gutenberg is already up-to-date!\n"
           ]
         }
       ]
@@ -4581,7 +4569,6 @@
           "base_uri": "https://localhost:8080/",
           "height": 495
         },
-        "collapsed": true,
         "cellView": "form",
         "outputId": "cc73745b-26e2-4bc4-a970-b0c325c54fef"
       },
@@ -4644,7 +4631,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MG85dZbJ36N1",
-        "outputId": "a541f45e-81f5-4982-a921-edc0f49eb5f4"
+        "outputId": "56c5e9ef-2378-4a44-95c5-b98ccda1fde6"
       },
       "execution_count": null,
       "outputs": [
@@ -4706,7 +4693,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYGK_0q96sal",
-        "outputId": "fbf8f3cf-337b-40b0-82b9-fb97cf436427"
+        "outputId": "8db66b28-0f53-4b64-e516-bc521553c367"
       },
       "execution_count": null,
       "outputs": [
@@ -4743,7 +4730,7 @@
           "height": 472
         },
         "id": "nGdhUIOc3-OV",
-        "outputId": "3959128e-047c-49c2-a7f3-2d496d283001"
+        "outputId": "ff6e4bca-e9e0-4508-b39b-85c2ece82ae2"
       },
       "execution_count": null,
       "outputs": [
@@ -4780,7 +4767,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SmcKJUQe4Ak6",
-        "outputId": "039c1fd6-afea-47a1-8755-a4f28c49878f"
+        "outputId": "32d6eaea-5b2a-41d2-e427-95affba31508"
       },
       "execution_count": null,
       "outputs": [
@@ -4819,7 +4806,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZtklRDqb4C6U",
-        "outputId": "b7680b3e-6391-4d7d-8e5c-e4edf4f5a938"
+        "outputId": "529eb51b-768a-4ea7-e104-426b7849c0f6"
       },
       "execution_count": null,
       "outputs": [
@@ -4857,7 +4844,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gTXHsEzX4GCm",
-        "outputId": "e0fe0971-6b56-454a-f27d-93e09aaa8382"
+        "outputId": "40265036-9b62-4c3d-dd36-62e89b495f75"
       },
       "execution_count": null,
       "outputs": [
@@ -4895,7 +4882,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 22
         }
       ]
     },
@@ -4908,10 +4895,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 488
         },
         "id": "h86kvaqg4Ll3",
-        "outputId": "bcf074a0-7853-429a-abbd-2626d20d3fbb"
+        "outputId": "52b3400d-f47b-47e7-ec8c-08d7cba33e99"
       },
       "execution_count": null,
       "outputs": [
@@ -4923,7 +4910,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 23
         },
         {
           "output_type": "display_data",
@@ -4958,7 +4945,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UpDZsx604PZZ",
-        "outputId": "762c008a-c328-4ba3-e820-a905fe866aca"
+        "outputId": "4a445951-2a80-4f42-d2b6-83e6466367a4"
       },
       "execution_count": null,
       "outputs": [
@@ -4996,7 +4983,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 24
         }
       ]
     },
@@ -5011,7 +4998,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2It6WoT04T94",
-        "outputId": "d1e76161-7d68-4d2a-e4ce-14b96e6c4567"
+        "outputId": "8a4190e8-1b08-4128-a6ab-a52fe755370d"
       },
       "execution_count": null,
       "outputs": [
@@ -5023,7 +5010,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 25
         }
       ]
     },
